<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/tes"
            tools:src="@drawable/movie_aquaman"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toEndOf="@id/img_photo"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/test_name"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@id/img_photo"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/test_release"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_release"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@id/img_photo"
            android:fontFamily="@font/open_sans"
            android:maxLines="3"
            android:textSize="14.4sp"
            tools:text="@string/test_desc" />


    </RelativeLayout>

</android.support.v7.widget.CardView>