<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/toolbar2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="?attr/colorPrimary"-->
        <!--android:minHeight="?attr/actionBarSize"-->
        <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->


        <ImageView
            android:id="@+id/img_foto"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/test_name"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/movie_aquaman" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/title"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_judul_film"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/open_sans_semibold"
            android:textColor="@android:color/black"
            android:textSize="17.6sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.007"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txt"
            app:layout_constraintWidth_percent="0.6"
            tools:text="Aquaman" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_judul_film"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/premiere"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/item_judul_film" />

        <TextView
            android:id="@+id/item_tgl_rilis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt1"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/open_sans_semibold"
            android:textColor="@android:color/black"
            android:textSize="17.6sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txt1"
            tools:text="May 13, 2000" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="187dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="187dp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/runtime"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/item_tgl_rilis" />

        <TextView
            android:id="@+id/item_durasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt5"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/open_sans_semibold"
            android:textColor="@android:color/black"
            android:textSize="17.6sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txt5"
            tools:text="1h 20m" />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/genre"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_foto" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_below="@id/item_tgl_rilis"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/rating"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/item_durasi" />

        <android.support.v7.widget.AppCompatRatingBar
            android:id="@+id/rt_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="78dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:numStars="5"
            android:progressTint="@android:color/black"
            android:rating="2.5"
            android:stepSize="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txt2" />

        <TextView
            android:id="@+id/item_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/open_sans"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt4"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras porttitor dolor sed quam sodales" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/overview"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_genre" />

        <TextView
            android:id="@+id/item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/open_sans"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt3"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras porttitor dolor sed quam sodales, vitae placerat orci tincidunt. Mauris porta libero nibh, ac dignissim sem finibus eget. Donec ut eros risus. Ut in nibh eu libero suscipit egestas. Integer mauris magna, feugiat vel ligula nec, vehicula ultrices elit. Nullam dictum, metus ac ornare dapibus, mi erat finibus justo, ut commodo nisl odio a enim. Nam aliquam non sapien ac mattis. Nulla et ligula ac elit vulputate feugiat tincidunt sit amet sapien. Proin ut orci nec libero pellentesque tempor. Nulla congue tortor id ligula facilisis, ut laoreet ante posuere. Nullam molestie egestas tincidunt. In hac habitasse platea dictumst. Proin id volutpat mi." />

    </android.support.constraint.ConstraintLayout>

</ScrollView>